--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,7 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Thierry SHYAKA <t.shyaka1@alustudent.com>
+Maureen Mbuvi <m.mbuvi@alustudent.com>
+
+ 
